--- a/Style.css
+++ b/Style.css
@@ -28,8 +28,8 @@ button:disabled {
     cursor: not-allowed; 
 }
 
-ul { 
-    list-style: none; 
+ol { 
+    list-style: decimal; 
     padding: 20px; 
     margin: 0 auto;
     width: 300px;
@@ -54,3 +54,4 @@ li:hover {
     box-shadow: 4px 4px 10px rgba(0,0,0,0.15),
                 -4px -4px 10px rgba(255,255,255,0.95);
 }
+
